--- a/ReactPractice/react-meetups/package.json
+++ b/ReactPractice/react-meetups/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^1.0.7",
+    "sass": "^1.50.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
   }
