--- a/lumenProjects/blog/composer.json
+++ b/lumenProjects/blog/composer.json
@@ -6,8 +6,12 @@
     "type": "project",
     "require": {
         "php": "^8.1",
+        "aws/aws-sdk-php": "^3.273",
         "firebase/php-jwt": "^6.5",
-        "laravel/lumen-framework": "^10.0"
+        "guzzlehttp/guzzle": "^7.7",
+        "illuminate/mail": "^10.13",
+        "laravel/lumen-framework": "^10.0",
+        "phanan/cascading-config": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
